--- a/web/index.html
+++ b/web/index.html
@@ -1,2 +1,36 @@
-<html>
-  </html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Stocks Tomorrow Price - LSTM Prediction by Adalberto Brant</title>
+</head>
+<body>
+  <h1>Stocks Tomorrow Price</h1>
+  <main>
+    <div>
+      <table>
+        <tr>
+          <th>Stock Name</th>
+          <th>Tomorrow Price</th>
+        </tr>
+        <tr id = "json_data">
+          <td class = "lines"></td>
+        </tr>
+      </table>
+    </div>
+
+  </main>
+  <footer>
+    <p>
+    Study about LSTM in Python3 with a simple web page!
+  </p>
+  <p>
+    Adalberto Caldeira 2023
+  </p>
+</footer>
+  <script defer type="module" src="./js/script.js"></script>
+</body>
+</html>
