--- a/web/index.html
+++ b/web/index.html
@@ -10,16 +10,8 @@
 <body>
   <h1>Stocks Tomorrow Price</h1>
   <main>
-    <div>
-      <table>
-        <tr>
-          <th>Stock Name</th>
-          <th>Tomorrow Price</th>
-        </tr>
-        <tr id = "json_data">
-          <td class = "lines"></td>
-        </tr>
-      </table>
+    <div id = "container">
+      
     </div>
 
   </main>
