minor modifications in css and index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <p>
     Adalberto Caldeira 2023
   </p>
+  <p><a href="https://github.com/adalbertobrant" target="_blank" alt="Git Hub Link">Git Hub</a></p>
 </footer>
   <script defer type="module" src="./js/script.js"></script>
 </body>
